# alteryx-open-src-update-checker

./: .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  changelog.rst  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.circleci/: config.yml
.github/: main.workflow
.github/workflows/: install_test.yaml  lint_check.yml  release.yml  unit_tests_with_latest_deps.yml
alteryx_open_src_update_checker/: __init__.py  functions.py  settings.py  utils.py
alteryx_open_src_update_checker/tests/: test_ayx_open_source_update_checker.py  test_featuretools_update_checker.py  test_version.py
featuretools_update_checker/: functions.py  utils.py
featuretools_update_checker/tests/: test_featuretools_update_checker.py
featuretools_update_client/: __init__.py  client.py  functions.py  settings.py  utils.py
featuretools_update_client/client/: client.py
featuretools_update_client/tests/: test_client.py  test_featuretools_update_client.py
release/: Dockerfile  upload.sh
