[metadata]
description-file = README.md
[aliases]
test=pytest
[tool:pytest]
addopts = --doctest-modules
python_files = featuretools_update_client/tests/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
[flake8]
exclude = docs/*
ignore = E501,W504 # line too long error, line break after binary operator
[isort]
forced_separate=featuretools_update_client
# vertical hanging indent
multi_line_output=3
